--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <section class="hero">
   <div class="container">
-    <h1>Danmarks næste<br><span>seriøse esports liga</span></h1>
-    <p>Struktur. Niveau. Respekt for spillet.</p>
+    <h1>Danmarks nyeste<br><span>CS2 Liga</span></h1>
+    <p>Struktur. Niveau. Udvikling.</p>
 
     <div class="cta">
       <a href="kontakt.html" class="btn primary">Kontakt Os</a>
