--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
       <h1>Kontakt Os</h1>
       <p>
         Er du et ambitiøst hold, en spiller eller en virksomhed,
-        der ønsker at indgå partnerskab?
+		der er interesseret i Esportserien?
       </p>
 
       <div class="info-block">
