--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container nav">
     <a href="index.html" class="logo">ESPORTSERIEN</a>
     <nav>
-      <a href="kontakt.html">Kontakt</a>
+      <a href="/kontakt">
     </nav>
   </div>
 </header>
@@ -49,4 +49,5 @@
 </footer>
 
 </body>
+
 </html>
