--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -14,7 +14,7 @@
   <div class="container nav">
     <a href="index.html" class="logo">ESPORTSERIEN</a>
     <nav>
-      <a href="index.html">Forside</a>
+      <a href="/">
     </nav>
   </div>
 </header>
