--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container nav">
     <a href="index.html" class="logo">ESPORTSERIEN</a>
     <nav>
-      <a href="/kontakt">
+      <a href="kontakt.html">
     </nav>
   </div>
 </header>
