--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container nav">
     <a href="index.html" class="logo">ESPORTSERIEN</a>
     <nav>
-      <a href="/kontakt">Kontakt</a>
+      <a href="kontakt.html">Kontakt</a>
     </nav>
   </div>
 </header>
@@ -49,6 +49,4 @@
 </footer>
 
 </body>
-
 </html>
-
