--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container nav">
     <a href="index.html" class="logo">ESPORTSERIEN</a>
     <nav>
-      <a href="kontakt.html">Kontakt</a>
+      <a href="/kontakt">Kontakt</a>
     </nav>
   </div>
 </header>
@@ -50,3 +50,4 @@
 
 </body>
 </html>
+
