--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Struktur. Niveau. Udvikling.</p>
 
     <div class="cta">
-      <a href="kontakt.html" class="btn primary">Kontakt Os</a>
+      <a href="/kontakt" class="btn primary">Kontakt Os</a>
     </div>
   </div>
 </section>
@@ -50,4 +50,5 @@
 
 </body>
 </html>
+
 
