--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
   <div class="container nav">
-    <a href="index.html" class="logo">ESPORTSERIEN</a>
+    <a href="/" class="logo">ESPORTSERIEN</a>
     <nav>
       <a href="/kontakt">Kontakt</a>
     </nav>
@@ -50,5 +50,6 @@
 
 </body>
 </html>
+
 
 
