--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -12,7 +12,7 @@
 
 <header>
   <div class="container nav">
-    <a href="index.html" class="logo">ESPORTSERIEN</a>
+    <a href="/" class="logo">ESPORTSERIEN</a>
     <nav>
       <a href="/">Forside</a>
     </nav>
