--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,9 @@
 
 <header>
   <div class="container nav">
-    <a href="index.html" class="logo">ESPORTSERIEN</a>
+    <a href="/" class="logo">
+      <img src="Esportserien-logo.png" alt="EsportSerien Logo">
+    </a>
     <nav>
       <a href="index.html">Forside</a>
     </nav>
@@ -80,4 +82,5 @@
 </footer>
 
 </body>
+
 </html>
