--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -12,7 +12,9 @@
 
 <header>
   <div class="container nav">
-    <a href="/" class="logo">ESPORTSERIEN</a>
+    <a href="/" class="logo">
+      <img src="Esportserien-logo.png" alt="EsportSerien Logo">
+    </a>
     <nav>
       <a href="/">Forside</a>
     </nav>
